# Petra

./: .gitignore  .gitmodules  BinomialTree_8h_source.html  BrentSolver_8h_source.html  CMakeLists.txt  Calendar_8h_source.html  CompilerMacros_8h_source.html  Date_8h_source.html  DayCountStrategy_8h_source.html  DayCounter_8h_source.html  Doxyfile  InterpolatorStrategy_8h_source.html  MonteCarlo_8h.html  MonteCarlo_8h__incl.map  MonteCarlo_8h__incl.md5  MonteCarlo_8h_source.html  NYSECalendar_8h_source.html  Parameters_8h_source.html  PayOff_8h_source.html  Petra_Portfolio_Report.tex  README.md  RNG_8h_source.html  Statistics_8h_source.html  Tenor_8h_source.html  VanillaOption_8h_source.html  YieldCurve_8h_source.html  annotated.html  classGreekCore_1_1BinomialTreePricer-members.html  classGreekCore_1_1BinomialTreePricer.html  classGreekCore_1_1BinomialTreePricer__coll__graph.map  classGreekCore_1_1BinomialTreePricer__coll__graph.md5  classGreekCore_1_1BinomialTreePricer_a2ee4a54bb60d462daf661b12a1929438_cgraph.map  classGreekCore_1_1BinomialTreePricer_a2ee4a54bb60d462daf661b12a1929438_cgraph.md5  classGreekCore_1_1BrentSolver-members.html  classGreekCore_1_1BrentSolver.html  classGreekCore_1_1BrentSolver__coll__graph.map  classGreekCore_1_1BrentSolver__coll__graph.md5  classGreekCore_1_1MonteCarloPricer-members.html  classGreekCore_1_1MonteCarloPricer.html  classGreekCore_1_1MonteCarloPricer__coll__graph.map  (+260 more)
.github/workflows/: documentation.yml
apps/MarketMaker/: CMakeLists.txt  Engine.h  Strategy.h  StrategyAvellaneda.h  Types.h  main.cpp
apps/MarketMaker/Risk/: Toxicity.h
benchmarks/: BenchmarkStatistics  BenchmarkStatistics.cpp  CMakeLists.txt  MonteCarloBenchmark.cpp  RatesBenchmark.cpp
examples/: AsyncMonteCarlo.cpp  BridgeUsage.cpp  CMakeLists.txt  MonteCarloConvergence.cpp  YieldCurveDemo.cpp  basic_usage.cpp
include/GreekCore/Numerics/: BrentSolver.h  RNG.h  Statistics.h
include/GreekCore/Pricing/: BinomialTree.h  MonteCarlo.h  Parameters.h  PayOff.h  VanillaOption.h
include/GreekCore/Rates/: Interpolator.h  InterpolatorStrategy.h  Tenor.h  YieldCurve.h
include/GreekCore/Time/: Calendar.h  Date.h  DayCountStrategy.h  DayCounter.h  NYSECalendar.h
include/GreekCore/Utils/: CompilerMacros.h
include/pricing/: PayOff.h
include/rates/: Interpolator.h
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  concepts_0.js  files_0.js  functions_0.js  functions_1.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_5.js  variables_6.js  (+5 more)
src/GreekCore/Numerics/: BrentSolver.cpp  RNG.cpp  Statistics.cpp
src/GreekCore/Pricing/: BinomialTree.cpp  CMakeLists.txt  MonteCarlo.cpp  Parameters.cpp  PayOff.cpp
src/GreekCore/Rates/: Interpolator.cpp  Tenor.cpp  YieldCurve.cpp
src/GreekCore/Time/: Calendar.cpp  Date.cpp  DayCounter.cpp  NYSECalendar.cpp
src_legacy/csis7803.20070727/: .project  c7803-yc-curvedatainput.csv  c7803-yc-curvespec.csv  curveDataInput2.changed.csv  curveDataInput2.csv  curveSpec2.csv
src_legacy/csis7803.20070727/conventions/: ACT365Convention.java  BusinessDayConvention.java  DayCountConvention.java  SimpleNextBusinessDayConvention.java
src_legacy/csis7803.20070727/forwardvolcurve/: ForwardVolatilities.java  ForwardVolatilityCurveCalculator.java
src_legacy/csis7803.20070727/interpolation/: Interpolator.java  LinearInterpolator.java
src_legacy/csis7803.20070727/montecarlo/: AverageOfUniformNumbers.java  CartesianBoxMuller.java  MonteCarloSimulator.java  PolarBoxMuller.java  Randomizer.java  StockPath.java  VolatilityInCall.java  VolatilityInPut.java
src_legacy/csis7803.20070727/numericalmethods/: FailToConvergeException.java  MathFunction.java  NewtonMethod.java  NumericalMethod.java  UndefinedValueException.java
src_legacy/csis7803.20070727/toolkit/: CalendarFixer.java  ElapsedTimeCalculator.java
src_legacy/csis7803.20070727/ui/: AddStockCommand.java  Command.java  CommandException.java  CommandParser.java  ComputeVolatilityFromCallCommand.java  CopyOfComputeVolatilityFromCallCommand.java  EchoCommand.java  GenYieldCurveCommand.java  GetContinuousRateCommand.java  GetDfOnDateCommand.java  GetDiscountFactorCommand.java  GetForwardRateCommand.java  ImportCurveDataCommand.java  ImportCurveSpecCommand.java  ListInstrumentsCommand.java  ListOptionCommand.java  MainClass.java  PriceBackCommand.java  PriceOptionCommand.java  Session.java  SetInterpolatorCommand.java  SetRandomizerCommand.java  ShowStockInfoCommand.java  ShowYieldCurveCommand.java  SimpleComputeVolatilityFromCallCommand.java  StandardCall.java  Test.java  TodayCommand.java
tests/: CMakeLists.txt  InterpolatorTest.cpp
tests/unit/: BinomialTreeTest.cpp  BrentSolverTest.cpp  CMakeLists.txt  InterpolatorStrategyTest.cpp  InterpolatorTest.cpp  MonteCarloTest.cpp  TenorTest.cpp  TimeTest.cpp  YieldCurveTest.cpp
(+18 files in other folders)
